# sax3

./: CMakeLists.txt  COPYING.GPL-3.0  Doxyfile.in  README  TODO  UserSuggestions  trial
b/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
b/src/: Makefile  cmake_install.cmake  sax3  sax3-keyboard
b/src/lens/: Makefile  cmake_install.cmake
b/src/modules.d/: Makefile  cmake_install.cmake
b/src/res/: Makefile  cmake_install.cmake
b/src/ui/: Makefile  cmake_install.cmake
src/: .main.cxx.swp  CMakeLists.txt  keyboard.cxx  main.cxx  main.cxx~  monitors.cxx  mouse.cxx  touchpad.cxx
src/inc/: Extensions.h  Files.h  InputDevice.h  Module.h  ServerFlags.h
src/lens/: CMakeLists.txt  desktop.aug  xorg.aug
src/man/: CMakeLists.txt  sax3.1
src/modules.d/: CMakeLists.txt  keyboard.desktop  monitor.desktop  mouse.desktop  sax3.desktop  touchpad.desktop
src/res/: CMakeLists.txt
src/ui/: CMakeLists.txt  UI.cxx  UI.cxx~  UI.h  UI.h~  YUI.cxx  YUI.h  ui.h  uifactory.h  yui.cxx  yui.h  yuifactory.cxx  yuifactory.h
