include_directories(${SaX3_SOURCE_DIR}/src)
link_directories(${SaX3_BINARY_DIR}/src)

include_directories(${LIBYUI_INCLUDE_DIR})

add_subdirectory(ui)
add_subdirectory(res)
add_subdirectory(modules.d)
add_subdirectory(lens)

add_executable(sax3 main.cxx)
add_executable(sax3-keyboard keyboard.cxx)
add_executable(sax3-mouse mouse.cxx)
add_executable(sax3-monitor monitors.cxx)
add_executable(sax3-touchpad touchpad.cxx)
install(PROGRAMS sax3 sax3-keyboard sax3-mouse sax3-monitor sax3-touchpad DESTINATION sbin)
install(FILES sax3.1.gz sax3-keyboard.1.gz sax3-mouse.1.gz sax3-monitor.1.gz sax3-touchpad.1.gz DESTINATION /usr/share/man/man1)
target_link_libraries(sax3 sax3-yuif ${LIBYUI_LIBRARY} augeas)
target_link_libraries(sax3-keyboard sax3-yuif ${LIBYUI_LIBRARY} augeas)
target_link_libraries(sax3-mouse sax3-yuif ${LIBYUI_LIBRARY} augeas)
target_link_libraries(sax3-monitor sax3-yuif ${LIBYUI_LIBRARY} augeas)
target_link_libraries(sax3-touchpad sax3-yuif ${LIBYUI_LIBRARY} augeas)
